# remember_md

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs  opener.rs  vault.rs
src/components/articles/: ArticleCard.tsx  ArticleList.tsx  ArticleRow.tsx
src/components/layout/: AppShell.tsx  MainHeader.tsx  Sidebar.tsx
src/components/reminders/: ReminderDialog.tsx
src/components/settings/: SettingsDialog.tsx
src/components/ui/: badge.tsx  button.tsx  input.tsx
src/domain/articles/: types.ts
src/domain/reminders/: status.ts  types.ts
src/lib/db/: articlesRepo.ts  client.ts  remindersRepo.ts  schema.ts  settingsRepo.ts
src/stores/: articleStore.ts  reminderStore.ts  settingsStore.ts  uiStore.ts
